[project]
name = "bapi"
version = "0.1.0"
description = "Blow backend api server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pillow>=12.1.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
    "sqlmodel>=0.0.31",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "requests>=2.32.5",
]
